tdf#147646 Auto numbering is wrong when the row has split/merged cells.

The fix is to,walk through the paragraphs in the cells that are
vertically merged(PROP_VERTICAL_MERGE)and remove the numbering
rules property from underlying text of those paragraph
properties of a cell.

Note that,there was a similar bug for DOC files,and it was fixed
with tdf#49102,we need to provide a seperate fix for DOCX files
as the DOCX filter is different than DOC.

Change-Id: Ia1cc22cbc04448a11ae0d136519681d9363e2828
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139401
Tested-by: Jenkins
Tested-by: Justin Luth <jluth@mail.com>
Reviewed-by: Justin Luth <jluth@mail.com>