sw/source/core/unocore/unotext.cxx
@@ -2226,7 +2226,10 @@ lcl_MergeCells(std::vector<VerticallyMergedCell> & rMergedCells)
         aMergedCell.aCells.front()->setPropertyValue(UNO_NAME_ROW_SPAN, uno::Any(nCellCount--));
         nCellCount*=-1;
         for(auto pxPSet = aMergedCell.aCells.begin()+1; nCellCount<0; ++pxPSet, ++nCellCount)
+        {
             (*pxPSet)->setPropertyValue(UNO_NAME_ROW_SPAN, uno::Any(nCellCount));
+            (*pxPSet)->setPropertyValue("VerticalMerge", uno::Any(true));
+        }
     }
 }
 
